@@ -892,7 +892,6 @@ BUFFER_HOOK_SIG(default_file_save){
     
     b32 is_virtual = global_config.enable_virtual_whitespace;
     if (global_config.automatically_indent_text_on_save && is_virtual){
-        clean_all_lines_buffer(app, buffer_id);
         auto_indent_buffer(app, buffer_id, buffer_range(app, buffer_id));
     }
     
