@@ -332,9 +332,8 @@ parse_project__config_data__version_1(Application_Links *app, Arena *arena, Stri
                     goto finish_command;
                 }
                 
-                cmd_result = config_compound_member(parsed, src,
-                                                    string_u8_litexpr("cmd"), 1);
-                if (cmd_result.success){
+                cmd_result = config_compound_member(parsed, src, string_u8_litexpr("cmd"), 1);
+                if (cmd_result.success && cmd_result.type == ConfigRValueType_Compound){
                     cmd_set = cmd_result.compound;
                     cmd_pos = cmd_result.pos;
                 }
@@ -691,18 +690,21 @@ set_current_project(Application_Links *app, Project *project, Config *parsed){
     if (print_feedback){
         Temp_Memory temp = begin_temp(scratch);
         
-        // Top
-        print_message(app, string_u8_litexpr("Loaded project file:\n"));
-        
         // Errors
         String_Const_u8 error_text = config_stringize_errors(app, scratch, parsed);
-        print_message(app, error_text);
+        if (error_text.size > 0){
+            print_message(app, string_u8_litexpr("Project errors:\n"));
+            print_message(app, error_text);
+            print_message(app, string_u8_litexpr("\n"));
+        }
         
         // Values
         if (project == 0){
             print_message(app, string_u8_litexpr("Could not instantiate project\n"));
         }
         else{
+            print_message(app, string_u8_litexpr("New project contents:\n"));
+            
             Temp_Memory temp2 = begin_temp(scratch);
             List_String_Const_u8 list = {};
             
